(add) lastVoted to ideaModel.js

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 .gitignore
 .DS_Store
+node_modules
 
 # Logs
 logs
@@ -29,9 +30,11 @@ client/styles/styles.min.css
 # Dependency directorys
 # Deployed apps should consider commenting these lines out:
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
-# node_modules/
-# bower_components/
+node_modules/
+client/bower_components/
 
 # Just Azure Things
 azure.err
 *.publishsettings
+
+
