--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test-server": "mocha ./server/spec/serverSpec.js"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.5.2",
     "chai": "^1.9.0",
     "express": "~4.0.0",
