--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "morgan": "^1.5.2",
     "nodemon": "^1.2.1",
     "q": "^1.2.0",
+    "querystring": "^0.2.0",
     "supertest": "^0.15.0"
   },
   "devDependencies": {
