(add) .gitignore file
Issue with git, file was wiped

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 ### node etc ###
 
-.gitignore
+#.gitignore
 .DS_Store
 
 # Logs
@@ -31,6 +31,7 @@ client/styles/styles.min.css
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
 node_modules/
 bower_components/
+client/bower_components/
 
 # Just Azure Things
 azure.err
