client-side authentiation implemented but untested

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-karma": "^0.10.1",
     "grunt-shell": "^1.1.2",
+    "jwt-simple": "^0.2.0",
     "karma": "^0.12.16",
     "karma-chrome-launcher": "0.1.7",
     "karma-cli": "0.0.4",
